# NxCadCore

./: .gitignore  README.md
CadImportModule/Core/: CMakeLists.txt  Core.vcxproj
CadImportModule/NxBackend/: CMakeLists.txt  NxBackend.vcxproj  NxBackend.vcxproj.filters
CadImportModule/NxBackend/src/: NxGeometryReader.cpp
Shared/: CMakeLists.txt
Shared/NxContracts/: CMakeLists.txt
Shared/NxContracts/include/NxContracts/: NxGeometryUtils.h
Shared/NxContracts/src/: NxGeometryUtils.cpp
